--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-flask
-gunicorn
-SQLAlchemy
-psycopg2-binary
-openpyxl
+Flask>=3.1.0
 Flask-Login>=0.6.3
+SQLAlchemy>=2.0.0
+psycopg2-binary>=2.9.9
+openpyxl>=3.1.2
+gunicorn>=21.2.0
+Werkzeug>=3.0.0
